# beastypage

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  build.sh  ecosystem.config.cjs  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json  run.sh  worktrees.json
backend/img_service/: README.md  pyproject.toml
backend/img_service/img_service/: config.py  thumbs.py
backend/img_service/img_service/app/: __init__.py
backend/renderer_service/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  lifegen_bootstrap.py  package.json  pyproject.toml
backend/renderer_service/lifegen/: __init__.py  scripts.py
backend/renderer_service/renderer_service/: __init__.py  assets.py  config.py  game.py  models.py  resources.py
backend/renderer_service/renderer_service/app/: __init__.py  main.py
backend/renderer_service/renderer_service/data/: peltInfo.json
backend/renderer_service/renderer_service/data/palettes/: african-patterns.json  american-patterns.json  arctic-waters.json  argyle-patterns.json  art-deco-patterns.json  basketweave-patterns.json  bavarian-tracht.json  black-watch.json  blackout.json  bold.json  (+60 more)
backend/renderer_service/renderer_service/renderer/: __init__.py  colors.py  image_ops.py  patterns.py  pipeline.py  repository.py  sprite_mapper.py  stages.py  v3_renderer.py
backend/renderer_service/tests/: test_accessory_mapping.py  test_render_smoke.py
backend/renderer_service/tests/fixtures/: reference_cat.json
backend/renderer_service/tools/: parity_check.py
(+645 files in other folders)
